find_library                (boost_program_options_LIBRARY      NAME boost_program_options
                                                                PATHS ${Boost_LIBRARY_DIR})

add_subdirectory			(alphashapes)
add_subdirectory			(ar-vineyard)
add_subdirectory			(cech-complex)
add_subdirectory			(fitness)
add_subdirectory			(grid)
add_subdirectory			(triangle)
add_subdirectory			(poincare)
add_subdirectory			(rips)
