add_subdirectory			(alphashapes)
#add_subdirectory			(ar-vineyard)
add_subdirectory			(cech-complex)
add_subdirectory			(consistency)
add_subdirectory			(cohomology)
add_subdirectory			(fitness)
add_subdirectory			(grid)
add_subdirectory			(triangle)
add_subdirectory			(poincare)
add_subdirectory			(rips)
